# firmware-template-discoveryf4

./: .cproject  .gitignore  .gitmodules  .mxproject  .project  CMakeLists.txt  discoveryf4.ioc  discoveryf4.txt  flash
Core/include/core/: core.h  devices.h  interfaces.h  semihosting.h
Core/src/: core.cpp  devices.cpp  hardfault.c  interfaces.cpp
Inc/: mxconstants.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h  usart.h  usbd_conf.h
Src/: adc.c  can.c  gpio.c  i2c.c  main.c  spi.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  tim.c  usart.c  usbd_cdc_if.c  usbd_conf.c
cmake/: FindBSP.cmake  FindCMSIS.cmake  FindSTM_HAL.cmake  FindUSBDevice.cmake
